# stitch-rs

./: Cargo.toml
src/: lib.rs
src/message/: error.rs  mod.rs
src/stitch/: error.rs  message.rs  mod.rs  types.rs  util.rs
src/util/: futures.rs  mod.rs
tests/: integration.rs
