[package]
name = "stitch"
version = "0.2.0"
authors = ["Stephen Cirner <steve@blackfynn.com>"]
description = "A rust interface for pushing data to https://www.stitchdata.com."
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
